# Shipwright

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
src/: main.rs
