[package]
name = "shipwright"
version = "0.2.0"
authors = ["Prince <mandeep@mandeepsingh.ca>", "Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
base64 = "0.12"
dkregistry = "0.4"
futures = "0.3.5"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
kube = "0.40.0"
kube-runtime = "0.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
simplelog = "0.8"