[package]
name = "shipwright"
version = "0.2.1"
authors = ["Prince <mandeep@mandeepsingh.ca>", "Brett <brett@mayson.io>"]
edition = "2021"

[dependencies]
base64 = "0.13"
dkregistry = "0.5"
futures = "0.3"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_19"] }
kube = "0.65.0"
kube-runtime = "0.73.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.7", features = ["full"] }
log = "0.4"
simplelog = "0.11"
